--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -64,7 +64,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
+	  <a class="navbar-brand" href="{% url 'store' %}">Ecommerce</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -72,12 +72,22 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="{% url 'store' %}">Loja <span class="sr-only">(current)</span></a>
 	      </li>
 	 
 	    </ul>
 	    <div class="form-inline my-2 my-lg-0">
-	     	<a href="#"class="btn btn-warning">Login</a>
+			<form action="{% url 'sair' %}" method="POST" style="height: 40px;">
+				{% csrf_token %}
+			<button class="btn" style=" justify-content: center;
+			display: flex;">
+				<img src="static/images/Iconexit.png" alt="" style="width: 40px;
+				height: 40px;
+				position: absolute;
+				bottom: 8px;
+				display: flex;">
+			</button>
+		</form>
 	     	
 	     	<a href="{% url 'cart' %}">
 	    		<img  id="cart-icon" src="{% static 'images/cart.png' %}">
