--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -81,7 +81,7 @@
 				{% csrf_token %}
 			<button class="btn" style=" justify-content: center;
 			display: flex;">
-				<img src="static/images/Iconexit.png" alt="" style="width: 40px;
+				<img src="{% static '/images/Iconexit.png' %}" alt="" style="width: 40px;
 				height: 40px;
 				position: absolute;
 				bottom: 8px;
